<resources>
    <string name="app_name">Kolkata Haat</string>

    <string name="login_email_hint">Email</string>
    <string name="login_address_hint">Address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_one_time_code">Enter Code</string>

    <!--  Login  -->
    <string name="str_err_msg_user_email">Please Enter Valid Email Address</string>
    <string name="str_err_msg_user_password">Please Enter Valid Password</string>
    <string name="str_err_msg_user_user_name">Please Enter Valid Name</string>
    <string name="str_err_msg_user_user_mobile">Please Enter Valid Mobile No.</string>


    <!--Admin Add Product-->
    <string name="str_add_product_name">Enter Product Name</string>
    <string name="str_add_product_packing">Choose Product Packing</string>
    <string name="str_add_product_price">Enter Product Price</string>
    <string name="str_add_product_delivery_charge">Enter Product Delivery Charge</string>
    <string name="str_add_product">Add Product</string>

    <string-array name="product_category">
        <item>Select</item>
        <item>Eatable</item>
        <item>Puja Items</item>
        <item>Clothing</item>
        <item>Others</item>
    </string-array>

    <string name="menu_str_all">All</string>
    <string name="menu_str_eatable">Eatable</string>
    <string name="menu_str_eatable_instead">Grocery</string>
    <string name="menu_str_puja_items">Puja Items</string>
    <string name="menu_str_clothing">Clothing</string>
    <string name="menu_str_others">Others</string>

    <string name="menu_product">Products</string>
    <string name="menu_users_list">Users List</string>
    <string name="menu_other_content">Other Content</string>
    <string name="menu_users_orders">All Orders</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_profile">Profile</string>
    <string name="str_title_profile">Edit Profile</string>
    <string name="menu_logout">Logout</string>

    <string name="menu_send">Send</string>

    <string name="menu_notification">Notification</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="MODEL">list</string>
    <string name="position">position</string>
    <!--
    drawer ==> https://achmadprogrammer.medium.com/android-navigation-drawer-like-gmail-with-fragment-d198a2d972c9
    drawer git link==> https://github.com/achmadqomarudin/Navigation-Drawer-with-Fragment
    -->

    <string name="countericon">CounterIcon</string>
    <string name="countertextview">CounterTextView</string>


    <string name="common_no_internet">No internet connection</string>
    <string name="common_no_user_available">Not any user available</string>
    <string name="str_alert">Alert!</string>
    <string name="ok">Ok</string>
    <string name="str_add">Add Product</string>

    <string name="str_category_name">choose a category name</string>
    <string name="str_add_product_quantity">Enter Quantity Ex. 500gm or 1kg</string>
    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
    <string name="notification_channel_id">default</string>

    <string name="order_type1">Pending</string>
    <string name="order_type2">Accepted</string>
    <string name="order_type3">Packing</string>
    <string name="order_type4">Delivered</string>
    <string name="order_type5">Received</string>
    <string name="order_type6">Rejected</string>
    <string name="str_delivery_charges">Delivery Charges</string>
    <string name="str_price">Price</string>
    <string name="no_data_available">No Data Available</string>
    <string name="no_available_any_order">No Available Any Order</string>

</resources>
