<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context="com.kolkatahaat.view.admin.AdminAddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/themeColor"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="@android:color/black" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgProduct"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher"/>

                    <Button
                        android:id="@+id/btnChoose"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Choose" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputItemCategory"
                        style="@style/CustomDropDownTilStyle"
                        android:layout_margin="8dp"
                        android:hint="@string/str_category_name">

                        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                            android:id="@+id/autoCompleteCategory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputItemName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/str_add_product_name">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextItemName"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:hint="@string/str_add_product_name"/>
                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputItemPacking"
                                style="@style/CustomDropDownTilStyle"
                                android:layout_margin="8dp"
                                android:hint="@string/str_category_name">

                                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                                    android:id="@+id/autoCompletePacking"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:focusable="false"
                                    android:inputType="none" />
                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/textInputItemPrice"
                                style="@style/parent"
                                android:hint="@string/str_add_product_price">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/editTextItemPrice"
                                    style="@style/modifiedEditText"
                                    android:inputType="textEmailAddress"
                                    android:maxLines="1"
                                    android:hint="@string/str_add_product_price"/>
                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputItemDeliveryChrg"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/str_add_product_delivery_charge">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editTextItemDeliveryChrg"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:hint="@string/str_add_product_delivery_charge"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btnAppProduct"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:text="@string/str_add_product" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>