<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kolkatahaat.view.RegisterActivity"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_above="@+id/txt_label"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputName"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextName"
                        style="@style/modifiedEditText"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:hint="Name"
                        android:imeOptions="actionNext"
                        android:lines="1"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputAddress"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextAddress"
                        style="@style/modifiedEditText"
                        android:lines="3"
                        android:maxLines="5"
                        android:minLines="3"
                        android:inputType="textMultiLine"
                        android:gravity="center|left|top"
                        android:hint="@string/login_address_hint"
                        android:imeOptions="actionNext"
                        android:text="nehakaneriya94@gmail.com"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        style="@style/modifiedEditText"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:hint="@string/login_email_hint"
                        android:imeOptions="actionNext"
                        android:lines="1"
                        android:text="nehakaneriya94@gmail.com"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputMobile"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextMobile"
                        style="@style/modifiedEditText"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:hint="Mobile Number"
                        android:imeOptions="actionNext"
                        android:maxLength="10"
                        android:lines="1"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/parent"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="@dimen/loginViewsMargin">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_password_hint"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        android:maxLength="10"
                        android:imeOptions="actionDone"
                        android:lines="1"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnUserUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Update"
                    android:textAllCaps="false"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    style="@style/Widget.AppCompat.Button.Colored"/>



            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!--<TextView
        android:id="@+id/txtInfo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="onLoginClick"
        android:adjustViewBounds="false"/>-->
</RelativeLayout>